changed style of index.html

--- a/index.html
+++ b/index.html
@@ -1,15 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alap HTML weboldal</title>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Projektek</title>
+    <style>
+        body {
+            background: linear-gradient(90deg, rgb(209, 222, 61) 0%, rgb(164, 174, 53) 25%, rgb(28, 114, 153, 1) 97%);
+            background-repeat: no-repeat;
+            background-size: cover;
+
+        }
+        .kozep{
+            background: rgba(182, 182, 182, 0.555);
+            width: 100%;
+            display: flex;
+            justify-content: space-around;
+            align-items: center;
+        }
+        .kozep a{
+            margin: 60px;
+            text-transform: uppercase;
+            font-size: 1.8rem;
+            text-decoration: none;
+            font-weight: bold;
+            transition: all 0.4 ease-in-out;
+        }
+        .kozep a:hover {
+            text-decoration: underline;
+            color: #016134;
+        }
+    </style>
 </head>
+
 <body>
-    <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis deleniti esse, delectus quae architecto praesentium incidunt asperiores adipisci, atque doloribus nobis voluptatem ullam eius ipsam ducimus! Non autem inventore ut soluta, incidunt eos nam earum est ipsam alias itaque fugiat tenetur. Ipsum tempore molestias cupiditate ratione? Blanditiis voluptate animi in obcaecati quisquam nemo mollitia cupiditate eos harum veritatis, tenetur voluptatibus vero culpa laboriosam. Obcaecati, quae deserunt facilis temporibus perferendis ullam ratione minus rem eius non similique cupiditate provident doloremque! Ab fugit, unde natus at modi molestias tempora beatae sequi totam minus dicta veritatis molestiae quidem odio iusto corrupti eius quas?
-    </p>
-    <h1>valami</h1>
+    <div class="kozep">
+        <a href="projekt1/index.html">Projekt1</a>
+        <a href="projekt2/index.html">Projekt2</a>
+        <a href="projekt3/index.html">Projekt3</a>
+    </div>
 </body>
+
 </html>
